Parent pom included and travis jdk-8 build disabled
Signed-off-by: David Kral <david.k.kral@oracle.com>